first commit for project 3

--- a/pro1/index.html
+++ b/pro1/index.html
@@ -1,34 +1,63 @@
 <!doctype html>
 <head>
+	<title>Lotte Reiniger Tribute Page</title>
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body id="main">
-	<div class="title-flex-top" style="border: 1px pink solid">
-	<img class="curtain" src="curtaint.png"></img>
-	<img class="curtain flip" src="curtaint.png"></img>
+	<div class="title-grid-t" >
+		<div class="filler"></div>
+		<img class="decrotive" src="curtain-t-3.png">
+		<div class= "title-div"><div id="title" class="title-text "><h1>Lotte Reiniger</h1></div></div>
+		<img class= "flip decrotive" src="curtain-t-3.png">	
+		<div class="filler"></div>
 	</div>
-	<div class="title-flex" style="border: 1px violet solid">
-	<img class="curtain" src="curtainb.png">
-	<h1 id="title">Lotte Reiniger</h1>
-	<div id="img-div"><img src="placeholder.jpg" id="image"><p id="img-caption">This is a placeholder</p></div>
-	<img class="curtain flip" src="curtainb.png">
+	<div class="title-grid-b" >
+		<div class="filler"></div>
+		<img class = " decrotive"src="curtain-b-3.png">
+		</img>
+		<div id="img-div"  style="margin: 0 auto; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+
+			<img id="image" style="box-shadow: inset 0 0 0 5px rgb(0, 0, 0);"class="round-corners" src="lotteworking1.png"></img>
+			<p id="img-caption">A silhouette of Lotte Reiniger at work</p>
+		</div>
+		<img class="flip decrotive" src="curtain-b-3.png"> 
+		</img>
+		<div class="filler"></div>
 	</div>
+	<div class="content-grid ">
+		<div class="filler"></div>
+		<img class="decrotive" src="deco2.png">
+		<div class=" content-column"> 
+			<img class="divider" src="about.png"></img>
+			<p id="tribute-info"class="divider">&nbsp;&nbsp;&nbsp;&nbsp;Charlotte "Lotte" Reiniger (2 June 1899 - 19 June 1981) was a German film director and the foremost pioneer of silhouette animation. Her best known films are The Adventures of Prince Achmed, from 1926-thought to be one of the oldest surviving feature-length animated films-and Papageno (1935). Reiniger is also noted for having devised a predecessor to the first multiplane camera; she made more than 40 films, all using her invention.<br><br>
+			&nbsp;&nbsp;&nbsp;&nbsp;Reiniger had a distinct art style in her animations that was very different from other artists in the time period of the 1920s and the 1930s, particularly in terms of characters. In the 1920s especially, characters tended to rely on facial expressions to express emotions or action, while Reiniger's characters relied on gestures to display emotions or actions. She also utilized the technique of metamorphosis often in her animations. This focus on transformation greatly benefits her tendency to work with fairytale stories. The Adventures of Prince Achmed specifically adapts fantastic elements to take advantage of animation to show things that could not be shown in reality. Reiniger considered animation's separation from the laws of the material plane to be one of the greatest strengths of the medium.<br><br>
 
-	<div class="tribute-flex">
-	<img class="deco" src="deco.png">	
-	<p  id="tribute-info"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus bibendum sagittis. Sed in mi sit amet dui placerat efficitur. Sed in ante posuere, fringilla massa nec, pharetra lorem. Vestibulum sit amet vestibulum enim. Vivamus fringilla urna sed dapibus tristique. Nulla pellentesque scelerisque aliquam. Pellentesque sit amet dignissim odio.
-
-Maecenas placerat nulla sit amet justo tincidunt, elementum hendrerit odio eleifend. Fusce erat sapien, viverra vel nibh at, accumsan sollicitudin nisi. Quisque sit amet quam cursus, volutpat eros eu, viverra est. Mauris convallis volutpat malesuada. Vivamus consequat dui ipsum, a efficitur velit laoreet vel. Nam eget tellus vitae dolor iaculis ornare non at urna. Nulla sed tortor sit amet urna dictum tempor. Suspendisse potenti. Ut vitae egestas sem, eget tincidunt lectus. Ut convallis nisl malesuada, condimentum purus vel, congue erat.
-
-Phasellus purus libero, elementum vitae finibus ac, placerat id magna. Sed a lacus sem. In nec tincidunt sem. Sed ornare, dui vitae dignissim mattis, felis orci consectetur purus, et maximus nisi arcu sed diam. Nulla facilisi. Curabitur sit amet quam tempor, tempor augue at, maximus sem. Vivamus aliquam odio tellus, sit amet tristique tellus facilisis id. Aliquam ullamcorper viverra sollicitudin. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque et laoreet augue. Curabitur pretium eu massa sit amet condimentum. Quisque ornare lorem massa, eget laoreet diam eleifend blandit. Sed feugiat tortor in odio mollis, vel accumsan felis laoreet. Aliquam ac pellentesque quam, nec commodo mi. Aliquam hendrerit mollis ex, non egestas dui sodales id. Vestibulum feugiat non erat eget volutpat.
-
-Suspendisse scelerisque, dolor sit amet tincidunt mattis, nisi nunc pretium neque, quis fermentum orci arcu nec elit. Etiam et odio dui. Donec luctus nulla sapien, vitae blandit ligula posuere eu. Suspendisse cursus justo ac lacus ullamcorper viverra. Etiam facilisis vestibulum turpis. Etiam efficitur nec magna id sollicitudin. Praesent id urna purus. In mattis nulla id auctor tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus quis consectetur diam, vitae scelerisque purus. Integer eget aliquet arcu. Sed nulla odio, euismod eget accumsan at, ullamcorper venenatis neque. Phasellus eu nisl tempor, hendrerit nulla vitae, tempor lorem. Vestibulum tristique massa ut neque dignissim, non pulvinar nulla iaculis. Suspendisse a ligula at mauris congue pharetra ut et ante.
-
-Suspendisse suscipit, elit vel commodo dapibus, augue felis auctor dolor, eget fermentum turpis leo quis leo. Donec eget mollis augue. Sed non diam id quam semper molestie vitae non risus. Vestibulum non lobortis est. Ut at eros sit amet dui commodo bibendum. Duis pharetra auctor diam ut consequat. Aenean iaculis posuere mi, sed consequat ante ultricies sit amet. Donec sit amet ligula in justo cursus dignissim at pharetra eros. Vivamus mi metus, feugiat at augue vel, placerat sodales augue. Donec tempus dignissim massa, sed lobortis metus.</p>
-	<img class="deco flip" src="deco.png">
+			&nbsp;&nbsp;&nbsp;&nbsp;Because of this, Reiniger's characters are not usually biologically correct, but they are able to express a fluidity which is very important to her style of expressionism. Although there are other animators in that time period that used these techniques, Reiniger stands out because she is able to accomplish this style using cutout animation. Reiniger's figures resemble stop-motion animation in the way that they move. <a id="tribute-link" target="_blank" href="http://www.wikipedia.com/wiki/Lotte_Reiniger">Click here</a> to learn more.</p>
+		</div>
+		<img src="deco2.png" class="flip decrotive">
+		<div class="filler"></div>
 	</div>
-	<p>For more information click <a target="_blank" id="tribute-link" href="#">here</a></p>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-</body>
+		<div class="content-grid ">
+		<div class="filler"></div>
+		<img src="deco2.png" class="decrotive">
+		<div class=" content-column"> 
+			<img class="divider" src="samples.png"></img>
+			<div class="sample-div">
+				<a href="https://www.youtube.com/watch?v=Kku75vGDD_0" target="_blank"><img src="cin.jpg" class="sample-blocks"></img></a>
+				<a href="https://www.youtube.com/watch?v=fHhpAT1i2tc" target="_blank"><img src="lrm.jpg" class="sample-blocks"></img></a>
+				<a href="https://www.youtube.com/watch?v=6i4uzZvhJnk" target="_blank"><img src="pib.jpg" class="sample-blocks"></img></a>
+				<a href="https://www.youtube.com/watch?v=1A38fUONi_o" target="_blank"><img src="aml.jpg" class="sample-blocks"></img></a>
+				<a href="https://www.youtube.com/watch?v=25SP4ftxklg" target="_blank"><img src="apa.jpg" class="sample-blocks"></img></a>
+				<a href="https://www.youtube.com/watch?v=KxkIGXVwZTM" target="_blank"><img src="hag.jpg" class="sample-blocks"></img></a>
+			</div>
 
+		</div>
+		<img src="deco2.png" class="flip decrotive">
+		<div class="filler"></div>
+	</div>
+	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+	</body>
