video is embeded, needs aligned.

--- a/pro3/index.html
+++ b/pro3/index.html
@@ -25,12 +25,41 @@
 	</div>
 
 	<div class="about-div">
-		<img src="bullet-holder.png">
-		<h2>Something</h2>
-		<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus. Cras consequat faucibus viverra. Proin rutrum vitae dui a maximus. Etiam eget lorem dui.</p>
+		<div class="about-filler"></div>
+		<img  class="bullet" src="bullet-holder.png">
+			<div class="about-text-box">
+				<h2 class="about-title">Something</h2>
+				<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus.</p>
+			</div>
+		<div class="about-filler"></div>
+	</div>
+	
+	<div class="about-div">
+		<div class="about-filler"></div>
+			
+		<img  class="bullet" src="bullet-holder.png">
+			<div class="about-text-box">
 
+				<h2 class="about-title">Something</h2>
+				<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus.</p>
+			</div>
+		<div class="about-filler"></div>
+	</div>
+	<div class="about-div">
+		<div class="about-filler"></div>
+
+		<img class="bullet" src="bullet-holder.png">
+		<div class="about-text-box">
+			<h2 class="about-title">Something</h2>
+			<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus.</p>
+		</div>
+		<div class="about-filler"></div>
 
 	</div>
+
+	<<iframe width="420" height="315"
+src="https://www.youtube.com/embed/UeveQ0Y2R8Q">
+</iframe>
 
 
 	<p> rem ipsum dolor sit amet, consectetur adipiscing elit. Praesent libero nisl, fermentum placerat metus ultricies, maximus euismod leo. Mauris quis tincidunt ex, eu bibendum quam. Etiam efficitur sapien id ante mollis, quis dapibus orci lacinia. Praesent at dolor non felis efficitur mollis in pretium mauris. Sed euismod sem non nunc eleifend cursus. Proin vitae pharetra dui, vel pellentesque neque. Aenean dignissim, nunc at suscipit interdum, elit metus egestas tellus, a hendrerit nulla nulla in arcu. Suspendisse ut purus blandit, mattis tortor sit amet, feugiat velit. Aliquam vulputate risus a lorem bibendum vehicula. Nam consectetur purus ligula.<br>
@@ -42,7 +71,7 @@
 	Nam eleifend sem nunc. Vestibulum sit amet ultrices dolor, id auctor nisl. Mauris non massa nisi. Duis non viverra ex. Pellentesque quis orci elit. Nam pellentesque hendrerit velit sed feugiat. Nulla eget sodales metus. Quisque ornare, nisl ac tristique tempus, erat nunc fringilla augue, a maximus odio justo ornare augue. Suspendisse dictum, nunc et pulvinar tempus, libero ipsum elementum augue, eget dignissim erat purus ut magna. Nulla ullamcorper facilisis ornare. Phasellus rutrum dui in nisl dignissim imperdiet. Phasellus efficitur eu nibh lacinia efficitur. Integer non risus eget ligula congue porta. Vivamus varius interdum nisl non lobortis. Donec tortor ex, porta eget ante sit amet, pellentesque dignissim risus.<br>
 
 	Mauris sollicitudin sodales mi, eget tincidunt massa aliquam eu. Donec vehicula finibus lectus at euismod. Phasellus egestas quam libero, vel dignissim mi dictum quis. Sed interdum eros vel nisi iaculis vehicula. Sed non consectetur mauris. Praesent nec velit in leo lobortis efficitur id quis sapien. Morbi maximus eros libero, vel feugiat sapien lobortis eu. Maecenas at nulla convallis nisi vestibulum imperdiet. Curabitur feugiat, nisi vel pulvinar cursus, orci sem euismod leo, ut aliquet turpis risus ut elit. Aliquam vitae neque massa.<br>
-
+	bibendum vehicula. Nam consectetur purus ligula.<br>
 	Ut rutrum massa vel arcu sollicitudin, eu mollis ex consequat. Phasellus accumsan, sem elementum egestas suscipit, sem odio maximus nisl, sit amet cursus sapien purus quis nisi. Aliquam sed porta odio, a tempus velit. Nullam tempor eros et est bibendum iaculis. Donec sit amet ipsum diam. Vestibulum non pellentesque enim, eu volutpat quam. Etiam dui mauris, condimentum ut purus a, congue varius velit. Maecenas quis mattis risus. Suspendisse viverra egestas sapien, non convallis est dapibus a.</p>
 
 </body>
