from work the other day

--- a/pro3/index.html
+++ b/pro3/index.html
@@ -56,12 +56,26 @@
 		<div class="about-filler"></div>
 
 	</div>
+	<div class="video-div">
+		<iframe width="420" height="315"
+	src="https://www.youtube.com/embed/UeveQ0Y2R8Q">
+	</iframe>
+	</div>
 
-	<<iframe width="420" height="315"
-src="https://www.youtube.com/embed/UeveQ0Y2R8Q">
-</iframe>
+	<div class="pricing-grid">
+		<div class="pricing-div">
+			<div style="background-color: red; height: calc(100% / 3); width: 100%;"></div>
+			<div style="background-color: yellow;height: calc(100%/ 3); width: 100%;"></div>
+			<div style="background-color: blue; height: calc(100%/ 3); width: 100%;"></div>
 
+		</div>
+		<div class="pricing-div">
 
+		</div>
+		<div class="pricing-div">
+
+		</div>
+	</div>
 	<p> rem ipsum dolor sit amet, consectetur adipiscing elit. Praesent libero nisl, fermentum placerat metus ultricies, maximus euismod leo. Mauris quis tincidunt ex, eu bibendum quam. Etiam efficitur sapien id ante mollis, quis dapibus orci lacinia. Praesent at dolor non felis efficitur mollis in pretium mauris. Sed euismod sem non nunc eleifend cursus. Proin vitae pharetra dui, vel pellentesque neque. Aenean dignissim, nunc at suscipit interdum, elit metus egestas tellus, a hendrerit nulla nulla in arcu. Suspendisse ut purus blandit, mattis tortor sit amet, feugiat velit. Aliquam vulputate risus a lorem bibendum vehicula. Nam consectetur purus ligula.<br>
 
 	Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus. Cras consequat faucibus viverra. Proin rutrum vitae dui a maximus. Etiam eget lorem dui.<br>
