--- a/pro3/index.html
+++ b/pro3/index.html
@@ -66,18 +66,20 @@
 		<div class="pricing-div">
 			<div class="select-div" style="background-color: red; height: calc(100% / 10); width: 100%;"><h3>A Few Cats<br>$20</h3></div>
 			<div class="select-div"><img class="pricing-img" src="testPricing1.png"></img></div>
-			<div class="select-div" style="background-color: blue; height: calc(100%/ 10); width: 100%;"><button class="select-button">Select</button></div>
+			<div class="select-div" style="background-color: blue; height: calc(100%/ 9); width: 100%;"><button class="select-button">Select</button></div>
 
 		</div>
 		<div class="pricing-div">
-			<div class="select-div" style="background-color: red; height: calc(100% / 10); width: 100%;"><h3>A Few Cats<br>$20</h3></div>
+			<div class="select-div" style="background-color: #e7bbe3ff; height: calc(100% / 9); width: 100%;"><h3>An Excessive Number of Cats</h3></div>
+			<div class="select-div" style="height: calc(100% / 9); width: 100%;"><h3>$40</h3></div>
+
 			<div class="select-div"><img class="pricing-img" src="testPricing.png"></img></div>
 			<div class="select-div" style="background-color: blue; height: calc(100%/ 10); width: 100%;"><button class="select-button">Select</button></div>
 
 		</div>
 		<div class="pricing-div">
-			<div class="select-div" style="background-color: red; height: calc(100% / 10); width: 100%;"><h3>A Few Cats<br>$20</h3></div>
-			<div class="select-div"><img class="pricing-img" src="testPricing1.png"></img></div>
+			<div class="select-div" style="background-color: red; height: calc(100% / 10); width: 100%;"><h3>Too Many Cats<br>$60</h3></div>
+			<div class="select-div"><img class="pricing-img" src="testPricing2.png"></img></div>
 			<div class="select-div" style="background-color: blue; height: calc(100%/ 10); width: 100%;"><button class="select-button">Select</button></div>
 
 		</div>
