a few changes to the layout

--- a/pro3/index.html
+++ b/pro3/index.html
@@ -70,11 +70,11 @@
 
 		</div>
 		<div class="pricing-div">
-			<div class="select-div" style="background-color: #e7bbe3ff; height: calc(100% / 9); width: 100%;"><h3>An Excessive Number of Cats</h3></div>
+			<div class="select-div" style="border: black 2px solid;background-color: #e7bbe3ff; height: calc(100% / 9); width: 100%; border-top: 0px;"><h3>An Excessive Number of Cats</h3></div>
 			<div class="select-div" style="height: calc(100% / 9); width: 100%;"><h3>$40</h3></div>
 
 			<div class="select-div"><img class="pricing-img" src="testPricing.png"></img></div>
-			<div class="select-div" style="background-color: blue; height: calc(100%/ 10); width: 100%;"><button class="select-button">Select</button></div>
+			<div class="select-div" style="height: calc(100%/ 10); width: 100%;"><button class="select-button">Select</button></div>
 
 		</div>
 		<div class="pricing-div">
