--- a/pro3/index.html
+++ b/pro3/index.html
@@ -2,34 +2,54 @@
 
 <head>
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 </head>
-
+<style>
+	@media (max-width: 1200px){
+		.pricing-div{
+			min-width: 300px;
+			height: 375px;	
+		}	
+	}
+	.select-div{
+		display:flex;
+		justify-content: center;
+		align-items: center;	
+	}
+</style>
 <body>
-	<div class="header-flex">
-		<img class="menu-item visible-mobile" src="aboutm.png">
-		<img class="menu-item visible-desktop" src="about.png">
-		<img class="menu-item visible-mobile" src="aboutm.png">
-		<img class="menu-item visible-desktop" src="about.png">
-		<img class="menu-item visible-mobile" src="videom.png">
-		<img class="menu-item visible-desktop" src="video.png">
-		<img class="menu-item visible-mobile" src="pricingm.png">
-		<img class="menu-item visible-desktop" src="pricing.png">
+	<div id="header">
+	<nav class="header-flex" id="nav-bar">
+		<img class="menu-item visible-mobile" src="catboxm.png">
+		<img id="header-img" class="menu-item visible-desktop" src="catbox.png">
+		<a class="nav-link" href="#about"><img class="menu-item visible-mobile" src="aboutm.png"></a>
+		<a class="nav-link" href="#about"><img class="menu-item visible-desktop" src="about.png"></a>
+		<a class="nav-link" href="#video"><img class="menu-item visible-mobile" src="videom.png"></a>
+		<a class="nav-link" href="#video"><img class="menu-item visible-desktop" src="video.png"></a>
+		<a class="nav-link" href="#pricing"><img class="menu-item visible-mobile" src="pricingm.png"></a>
+		<a class="nav-link" href="#pricing"><img class="menu-item visible-desktop" src="pricing.png"></a>
+		
 
 
 
+	</nav>
 	</div>
 	<div class="filler-div"></div>
+<form id="form" action="https://www.freecodecamp.com/email-submit">
 	<div class="form-div">
-		<input placeholder="Enter your email" class= "menu-item input" type="email"></input>
-		<button class="submit-button" >Submit</button>
+		<input id="email" placeholder="Enter your email" class= "menu-item input" type="email" name="email"></input>
+		<input id="submit" class="submit-button" value="Send Mail" type="submit"></input>
+		
 	</div>
+</form>
 
-	<div class="about-div">
+	<div class="about-div" id="about">
 		<div class="about-filler"></div>
-		<img  class="bullet" src="bullet-holder.png">
+		<img  class="bullet" src="bullet.png">
+		<div class="about-filler-2"></div>
 			<div class="about-text-box">
-				<h2 class="about-title">Something</h2>
-				<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus.</p>
+				<h2 class="about-title">Highest Quality</h2>
+				<p class="about-text">Our cats meet only the highest quality standards of any available feline delivery service on the market. Every cat delivered exceeds the gold cat standard so you can subscribe with confidence.</p>
 			</div>
 		<div class="about-filler"></div>
 	</div>
@@ -37,27 +57,29 @@
 	<div class="about-div">
 		<div class="about-filler"></div>
 			
-		<img  class="bullet" src="bullet-holder.png">
+		<img  class="bullet" src="bullet2.png">
+			<div class="about-filler-2"></div>
 			<div class="about-text-box">
 
-				<h2 class="about-title">Something</h2>
-				<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus.</p>
+				<h2 class="about-title">Free Box Included</h2>
+				<p class="about-text">Every delivery of cats is shipped in a box at no additional cost to you.</p>
 			</div>
 		<div class="about-filler"></div>
 	</div>
 	<div class="about-div">
 		<div class="about-filler"></div>
 
-		<img class="bullet" src="bullet-holder.png">
+		<img class="bullet" src="bullet3.png">
+			<div class="about-filler-2"></div>
 		<div class="about-text-box">
-			<h2 class="about-title">Something</h2>
-			<p class="about-text">Vestibulum elementum dolor quis quam sagittis, eget scelerisque felis gravida. Integer lacinia sem eu risus venenatis condimentum. Nullam feugiat mollis convallis. Pellentesque maximus justo a eleifend maximus. Proin rutrum quam eu egestas porttitor. Vivamus commodo enim ut ullamcorper faucibus.</p>
+			<h2 class="about-title">Softest Cats</h2>
+			<p class="about-text">All cats guaranteed to be extremely soft and adorable. Become the cat person you were destined to be, subscribe today.</p>
 		</div>
 		<div class="about-filler"></div>
 
 	</div>
 	<div class="video-div">
-		<iframe width="420" height="315"
+		<iframe id="video" width="420" height="315"
 	src="https://www.youtube.com/embed/UeveQ0Y2R8Q">
 	</iframe>
 	</div>
@@ -74,7 +96,7 @@
 		</div>
 
 
-		<div class="pricing-div">
+		<div class="pricing-div" id="pricing">
 			<div class="select-div" style="border-radius: 15px 15px 0px 0px; background-color: #e7bbe3ff; height: calc(100% / 9); width: 100%; border-top: 0px;"><h3>An Excessive Number of Cats</h3></div>
 			<div class="select-div" style="height: 20px; width: 100%;"><h3>$40</h3></div>
 
@@ -94,5 +116,6 @@
 		</div>
 		</div>
 	</div>
-	<div class="footer-div"><p class="footer-link">Words</p><p class="footer-link">More words</p><p class="footer-link">and still more</p></div>
+	<div class="footer-div"><p class="footer-link"><a href="#">Privacy</a> &nbsp</p><p class="footer-link"><a href="#">Terms</a>&nbsp&nbsp<p class="footer-link"><a href="#">Contacts</a> &nbsp</p></div>
+	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
