--- a/pro3/index.html
+++ b/pro3/index.html
@@ -20,12 +20,17 @@
 <body>
 	<div id="header">
 	<nav class="header-flex" id="nav-bar">
-		<img class="menu-item visible-mobile" src="catboxm.png">
-		<img id="header-img" class="menu-item visible-desktop" src="catbox.png">
+		<a class"nav-link"><img id="header-img" class="menu-item visible-desktop" src="catbox.png"></a>
+
+		<a class"nav-link"><img class="menu-item visible-mobile" src="catboxm.png"></a>
+
+	
 		<a class="nav-link" href="#about"><img class="menu-item visible-mobile" src="aboutm.png"></a>
+
 		<a class="nav-link" href="#about"><img class="menu-item visible-desktop" src="about.png"></a>
-		<a class="nav-link" href="#video"><img class="menu-item visible-mobile" src="videom.png"></a>
 		<a class="nav-link" href="#video"><img class="menu-item visible-desktop" src="video.png"></a>
+		<a class="nav-link" href="#video"><img class="menu-item visible-mobile" src="videom.png"></a>
+
 		<a class="nav-link" href="#pricing"><img class="menu-item visible-mobile" src="pricingm.png"></a>
 		<a class="nav-link" href="#pricing"><img class="menu-item visible-desktop" src="pricing.png"></a>
 		
@@ -87,7 +92,7 @@
 	<div class="pricing-grid">
 		<div class="pricing-div">
 			<div class="select-div" style="border-radius: 15px 15px 0px 0px; background-color: #e7bbe3ff; height: calc(100% / 9); width: 100%; border-top: 0px;"><h3>A Few Cats</h3></div>
-			<div class="select-div" style="height: 20px; width: 100%;"><h3>$20</h3></div>
+			<div class="select-div" style="height: 20px; width: 100%;"><h3>$20/Month</h3></div>
 
 
 			<div class="select-div"><img class="pricing-img" src="testPricing1.png"></img></div>
@@ -98,7 +103,7 @@
 
 		<div class="pricing-div" id="pricing">
 			<div class="select-div" style="border-radius: 15px 15px 0px 0px; background-color: #e7bbe3ff; height: calc(100% / 9); width: 100%; border-top: 0px;"><h3>An Excessive Number of Cats</h3></div>
-			<div class="select-div" style="height: 20px; width: 100%;"><h3>$40</h3></div>
+			<div class="select-div" style="height: 20px; width: 100%;"><h3>$40/Month</h3></div>
 
 
 			<div class="select-div"><img class="pricing-img" src="testPricing.png"></img></div>
@@ -107,7 +112,7 @@
 		</div>
 				<div class="pricing-div">
 			<div class="select-div" style="border-radius: 15px 15px 0px 0px; background-color: #e7bbe3ff; height: calc(100% / 9); width: 100%; border-top: 0px;"><h3>Too Many Cats</h3></div>
-			<div class="select-div" style="height: 20px; width: 100%;"><h3>$60</h3></div>
+			<div class="select-div" style="height: 20px; width: 100%;"><h3>$60/Month</h3></div>
 
 
 			<div class="select-div"><img class="pricing-img" src="testPricing2.png"></img></div>
