--- a/pro5/index.html
+++ b/pro5/index.html
@@ -4,9 +4,23 @@
 </head>
 
 <body>
+	<nav class="nav-bar" id="navbar"></nav>
 	<div class="intro" id="welcome-section">
+
+		<div class="welcome-filler"></div>
+
+		<h1>Welcome</h1>
 	</div>
-	<div class="content">
+	<div class="content" id="projects">
+		<div class="project"></div>
+		<div class="project"></div>
+		<div class="project"></div>
+		<div class="project"></div>
+		<div class="project"></div>
+		<div class="project"></div>
+	
+
+
 	</div>
 	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
